# base

./: install.sh  setup.cfg
base/module/submodule/: demo.py
etc/: base.conf
