[metadata]
name = base
version = 2018.05.15
summary = The base of project
description-file = README.rst
license = Apache License, Version 2.0
author = JackChan
author-email = jack.chen.8@qq.com
classifier =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    base
data_files =
    etc/base= etc/*
